Update swagger docs Added primitive add new contact form
