# api/modules/v1/controllers/ContactController.php
@@ -8,71 +8,49 @@ use Yii;
 
 class ContactController extends \api\rest\ActiveController
 {
-    public $modelClass = 'api\models\Bill';
+    public $modelClass = 'api\modules\v1\models\Contact';
 
-    public function behaviors()
+    /*public function behaviors()
     {
         $behaviors = parent::behaviors();
         $behaviors['access'] = [
             'class' => AccessControl::className(),
             'rules' => [
                 [
-                    'actions' => ['search'],
+                    'actions' => ['create', 'update', 'delete', 'view', 'index', 'search'],
                     'allow' => true,
-                    'roles' => [],
                 ],
             ],
         ];
-        $behaviors['corsFilter'] = [
-            'class' => \yii\filters\Cors::className(),
-            'cors' => [
-                // restrict access to
-                'Origin' => ['http://contact-list.loc:8080', 'http://contact-list.loc'],
-                // Allow OPTIONS caching
-                'Access-Control-Max-Age' => 3600,
-                // Allow the X-Pagination-Current-Page header to be exposed to the browser.
-                'Access-Control-Expose-Headers' => ['X-Pagination-Current-Page'],
-            ],
-
-        ];
 
         return $behaviors;
-    }
+    }*/
 
     protected function verbs()
     {
         return [
-            'report' => ['POST'],
+            'index' => ['GET', 'HEAD'],
+            'view' => ['GET', 'HEAD'],
+            'create' => ['POST'],
+            'update' => ['PUT, PATCH'],
+            'delete' => ['DELETE'],
+            'options' => ['OPTIONS'],
         ];
     }
 
-    /**
-     * @inheritdoc
-     */
-    public function actions()
-    {
-        $actions = parent::actions();
-
-        //unset($actions['view']);
-        unset($actions['delete']);
-        //unset($actions['update']);
-        unset($actions['create']);
-
-        return $actions;
-    }
 
     /**
      *
-     * @SWG\Post(
+     * @SWG\Get(
      *    path="/contact/search",
      *    summary="Search contact list",
      *    operationId="search",
      *    tags={"contact"},
      * 	  @SWG\Parameter(
-     * 			name="",
-     * 			in="body",
+     * 			name="searchValue",
+     * 			in="query",
      * 			required=true,
-     * 			@SWG\Schema(ref="#/definitions/NewContact"),
+     * 			type="string",
      *	  ),
      *    @SWG\Response(
      *        response=200,
@@ -86,7 +64,7 @@ class ContactController extends \api\rest\ActiveController
      *    )
      * )
      *
-     * @return Bill|array
+     * @return Contact|array
      */
     public function actionSearch(){
 
@@ -94,4 +72,7 @@ class ContactController extends \api\rest\ActiveController
         return $search->search(\Yii::$app->request->get(), '');
 
     }
+
 }
+
+
