# api/web/swagger.json
@@ -12,10 +12,10 @@
         },
         "version": "1.0.0"
     },
-    "host": "api.customer-list.loc",
-    "basePath": "/v1",
+    "host": "api.contact-list.loc:8080",
+    "basePath": "/",
     "schemes": [
-        "https"
+        "http"
     ],
     "consumes": [
         "application/json"
@@ -24,8 +24,133 @@
         "application/json"
     ],
     "paths": {
-        "/contact/search": {
+        "/contact/create": {
             "post": {
+                "tags": [
+                    "contact"
+                ],
+                "summary": "Create new contact entry",
+                "operationId": "create",
+                "parameters": [
+                    {
+                        "name": "contact",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewContact"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful"
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/{id}": {
+            "get": {
+                "tags": [
+                    "contact"
+                ],
+                "summary": "View Contact",
+                "operationId": "view",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful",
+                        "schema": {
+                            "$ref": "#/definitions/Contact"
+                        }
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/update/{id}": {
+            "put": {
+                "tags": [
+                    "contact"
+                ],
+                "summary": "Update Contact",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "contact",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/NewContact"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful"
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "contact"
+                ],
+                "summary": "Delete Contact",
+                "operationId": "delete",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful"
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/contact/search": {
+            "get": {
                 "tags": [
                     "contact"
                 ],
@@ -33,12 +158,10 @@
                 "operationId": "search",
                 "parameters": [
                     {
-                        "name": "",
-                        "in": "body",
+                        "name": "searchValue",
+                        "in": "query",
                         "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/NewContact"
-                        }
+                        "type": "string"
                     }
                 ],
                 "responses": {
@@ -107,19 +230,22 @@
             },
             "type": "object"
         },
-        "Contact": {
+        "BaseContact": {
             "properties": {
                 "id": {
-                    "type": "int",
-                    "format": "integer"
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
                 },
                 "first_name": {
                     "type": "string",
-                    "format": "string"
+                    "format": "string",
+                    "example": "John"
                 },
                 "last_name": {
                     "type": "string",
-                    "format": "string"
+                    "format": "string",
+                    "example": "Doe"
                 },
                 "profile_photo": {
                     "type": "string",
@@ -131,6 +257,67 @@
                 }
             },
             "type": "object"
+        },
+        "Contact": {
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#/definitions/BaseContact"
+                },
+                {
+                    "properties": {
+                        "phones": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/BaseContactPhone"
+                            }
+                        }
+                    }
+                }
+            ]
+        },
+        "BaseContactPhone": {
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "contact_id": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "label": {
+                    "type": "string",
+                    "format": "string",
+                    "example": "Home"
+                },
+                "phone_number": {
+                    "type": "string",
+                    "format": "string",
+                    "example": "555-5555"
+                }
+            },
+            "type": "object"
+        },
+        "ContactPhone": {
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#/definitions/BaseContactPhone"
+                },
+                {
+                    "properties": {
+                        "contact": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/BaseContact"
+                            }
+                        }
+                    }
+                }
+            ]
         }
     }
 }
